결과 직전까지 완료

--- a/public/design/5_Member.html
+++ b/public/design/5_Member.html
@@ -194,20 +194,19 @@
   <div class="custom-dropdown">
     <button id="member-button">선택해주세요 !</button>
     <ul class="custom-dropdown-content" id="member-dropdown">
-      <li onclick="selectMemberOption('혼자')">혼자</li>
+      <li onclick="selectMemberOption('기타')">혼자</li>
       <li onclick="selectMemberOption('친구')">친구</li>
-      <li onclick="selectMemberOption('부모님')">부모님</li>
+      <li onclick="selectMemberOption('부모')">부모님</li>
       <li onclick="selectMemberOption('배우자')">배우자</li>
-      <li onclick="selectMemberOption('남자친구')">남자친구</li>
-      <li onclick="selectMemberOption('여자친구')">여자친구</li>
-      <li onclick="selectMemberOption('아이')">아이</li>
-      <li onclick="selectMemberOption('친척')">친척</li>
-      <li onclick="selectMemberOption('형제')">형제</li>
-      <li onclick="selectMemberOption('자매')">자매</li>
-      <li onclick="selectMemberOption('조부모님')">조부모님</li>
+      <li onclick="selectMemberOption('연인')">연인</li>
+      <li onclick="selectMemberOption('자녀')">아이</li>
+      <li onclick="selectMemberOption('친인척')">친척</li>
+      <li onclick="selectMemberOption('형제/자매')">형제</li>
+      <li onclick="selectMemberOption('형제/자매')">자매</li>
+      <li onclick="selectMemberOption('조부모')">조부모님</li>
       <li onclick="selectMemberOption('동료')">동료</li>
-      <li onclick="selectMemberOption('모임')">모임</li>
-      <li onclick="selectMemberOption('단체')">단체</li>
+      <li onclick="selectMemberOption('모임/단체')">모임</li>
+      <li onclick="selectMemberOption('모임/단체')">단체</li>
     </ul>
   </div>
   <p class="text-1 text-focus-in">제주,더 자세하게 알려주세요 !</p>
