--- a/public/design/6._People.html
+++ b/public/design/6._People.html
@@ -3,78 +3,72 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>동반자 수</title>
+  <title>구성원</title>
   <style>
-    /* 기본 폰트 스타일 설정 */
+    /* 기존 스타일 */
     @font-face {
-    font-family: 'RixXladywatermelonR';
-    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2408-4@1.0/RixXladywatermelonR.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-  }
+      font-family: 'RixXladywatermelonR';
+      src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2408-4@1.0/RixXladywatermelonR.woff2') format('woff2');
+      font-weight: normal;
+      font-style: normal;
+    }
     body {
-      font-family: 'RixXladywatermelonR',sans-serif; /* 글꼴 설정 */      
+      font-family: 'RixXladywatermelonR', sans-serif;
       display: flex;
-      justify-content: center; /* 수평 방향 중앙 정렬 */ 
-      align-items: center; /* 수직 중앙 정렬 */
-      flex-direction: column;/* 정렬 방향 설정 */
-       /* 여백 제거 */
-      margin: 0; 
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      margin: 0;
       padding: 0;
-       /* 배경 이미지 설정  */
-      background-image: url('./static/images/people.jpg');
-      background-size: cover; /* 배경 이미지를 화면 전체에 맞춤 */
-      background-position: center; /* 이미지가 가운데 오도록 설정 */
-      background-attachment: fixed; /* 스크롤 시 배경이 고정되도록 설정 */
-      background-repeat: no-repeat; /* 이미지 반복 방지 */
+      background-image: url('./static/images/age_group.png');
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+      background-repeat: no-repeat;
     }
-    
     .text-focus-in {
-    	-webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-	        animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;  
+      -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+      animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;  
     }
-    /* 질문 */
     .text {
-      /* 문구 고정 */
       display: fixed;
-      /* 중앙 정렬 */
       justify-content: center;
       font-size: 4.5em;
-      margin-top : 33vh;
-    }
-    /* 숫자로 나이를 입력해주세요 */
-    .input-text {
-      display: fixed;
-      color: white;
+      margin-top: 17vh;
+    }   
+     /* 숫자로 나이를 입력해주세요 */
+    .input-text , .input-texts  {
+      color: black;
       font-size: 2em;
-      background-color: #7ed957;
-      border: none;
+      background-color: white;
+      border: 4px solid #7ed957;
       border-radius: 25vh;
       cursor: pointer;
       text-align: center;
-      padding:  2vh 20vw;
+      padding:  2vh 7vw;
       outline: none;
-      margin-top: 29vh;
-      }
-    /* 클릭시 변경되는 답변 */
-    .input-text-enter {
-      font-family: 'RixXladywatermelonR',sans-serif;
-      display: fixed;
-      color: white;
+      margin-top: 3vh;
+      }   
+       /* 클릭시 변경되는 답변 */
+    .input-text-enter ,.input-text-enters {
+      color: black;
       font-size: 2em;
-      background-color: #feac36;
-      border: none;
+      background-color: white;
+      border: 4px solid #7ed957;
       border-radius: 25vh;
       cursor: pointer;
       text-align: center;
-      padding:  2vh 19.7vw;
+      padding:  2vh 7vw;
       outline: none;
-      margin-top: 29vh;
+      margin-top: 3vh;
       }
-  
+      .input-text-enter {
+        padding:  2vh 7vw;
+      }
+      .input-text-enters {
+        padding:  2vh 8vw;}
     /* 하단 아이콘 */
     .icon-before {
-      display: fixed;
       position: absolute;
       bottom: 3%;
       left: 2%;
@@ -87,7 +81,6 @@
     } 
     /* 하단 아이콘 */
     .icon-next {
-      display: fixed;
       position: absolute;
       bottom: 3%;
       right: 2%;
@@ -104,6 +97,7 @@
       bottom: 1%;
       color: #adb5bd;
     } 
+
     @-webkit-keyframes text-focus-in {
       0% {
         -webkit-filter: blur(12px);
@@ -128,20 +122,26 @@
         opacity: 1;
       }
     }
-
   </style>
 </head>
 <body>
-  <p class="text text-focus-in">제주, 몇 명이 함께 가시나요?</p>
-    <span id="input-container" class="input-text" onclick="showInput()">숫자로 인원수를 입력해주세요.</span>
-    <div class="icon-before"></div>
-    <div class="icon-next"></div>
+  <p class="text text-focus-in">제주, 몇 명과 함께 가시나요?</p>
+  <span id="input-container" class="input-text" onclick="showInput()">숫자로 인원수를 입력해주세요.</span>
+  <p class="text text-focus-in">제주, 같이 가시는 분의 나이를 입력해주시겠어요 ?</p>  
+  <span id="input-containers" class="input-texts" onclick="showInputs()">숫자로 평균 나이를 입력해주세요.</span>
+  <div class="icon-before"></div>
+  <div class="icon-next"></div>
   <p class="we">ⓒ 2024. Jeju 넘는 곰 All rights reserved.</p>
+
   <script>
     function showInput() {
       const container = document.getElementById('input-container');
       container.outerHTML = '<input class="input-text-enter">';
+    }    
+    function showInputs() {
+      const containers = document.getElementById('input-containers');
+      containers.outerHTML = '<input class="input-text-enters">';
     }
-    </script>
+  </script>
 </body>
 </html>
