--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>도르멍 탐라</title>
+    <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=b2d5d7d31b57fe640757eeda30c825bd&autoload=false"></script>
 </head>
 <body>
 <div id="root"></div>
