--- a/public/design/2_Information.html
+++ b/public/design/2_Information.html
@@ -390,7 +390,7 @@
   </style>
 </head>
 <body>
-    <p class="jeju-1 focus-in-expand-fwd">제주도 여행 가실 때, 계획 짜기 막막하지 않으셨나요 ?</p>
+    <p class="jeju-1 focus-in-expand-fwd">20대, 제주도 여행 가실 때, 계획 짜기 막막하지 않으셨나요 ?</p>
     <p class="jeju-2 focus-in-expand-fwd">원하시는 걸 알려주시면 저희가 만들어드릴게요 !</p>
     <div class="icon-before"></div>
     <button class="icon-next" id="openModalBtn"></button>
