--- a/public/design/3_Gender.html
+++ b/public/design/3_Gender.html
@@ -50,13 +50,12 @@
     }
     /* 버튼 */
     .button {
-      display: fixed;
       font-family: 'RixXladywatermelonR',sans-serif;
-      background-color: #7ed957; /* 버튼 색상 */
       color: black;
-      border: none;
+      background-color: white;
+      border: 4px solid #7ed957;
       border-radius: 5vh;
-      padding:  2vh 5vw;
+      padding:  3vh 5vw;
       font-size: 2em;
       cursor: pointer;
       transition: background-color 0.3s;
@@ -64,7 +63,7 @@
     }
     /* 버튼 클릭시 변경사항 */
     .button:hover {
-      background-color: #feac36; /* 버튼 호버 색상 */
+      background-color: #7ed957; /* 버튼 호버 색상 */
     }    
     /* 하단 아이콘 */
     .icon-before {
