--- a/public/design/8_Season.html
+++ b/public/design/8_Season.html
@@ -42,31 +42,30 @@
     } 
     /* 입력창 */
     .input-text {
-      color: white;
+      font-family: 'RixXladywatermelonR', sans-serif;
+      color: black;
+      background-color: white;
+      border: 4px solid #7ed957;
+      border-radius: 5vh;
       font-size: 2em;
-      background-color: #7ed957;
-      /* 테두리 */
-      border: none;
-      border-radius: 25vh;
-      /* 클릭시 커서*/
       cursor: pointer;
       text-align: center;
-      padding:  2vh 18.3vw;
+      padding:  3vh 14.9vw;
       outline: none;
       margin-top: 29vh;
       }
     
      /* 클릭시 변경되는 답변 */
     .input-text-enter {
-      font-family: 'RixXladywatermelonR',sans-serif;
-      color: white;
-      font-size: 2em;
-      background-color: #feac36;
+      font-family: 'RixXladywatermelonR', sans-serif;
+      color: black;
+      background-color: #7ed957;
       border: none;
-      border-radius: 25vh;
+      border-radius: 5vh;
+      font-size: 2em;
       cursor: pointer;
       text-align: center;
-      padding:  2vh 20vw;
+      padding:  3vh 17vw;
       outline: none;
       margin-top: 29vh;
       }
@@ -127,7 +126,7 @@
   </style>
 </head>
 <body>
-    <p class="text text-focus-in">제주, 어느 계절에 떠나고 싶으신가요?</p>
+    <p class="text text-focus-in">제주, 언제 떠나고 싶으신가요?</p>
     <span id="input-container" class="input-text" onclick="showInput()">숫자로 떠나시는 월을 입력해주세요.</span>
     </div>
     <div class="icon-before"></div>
